--- a/year2/adproc/coursework/nbproject/project.properties
+++ b/year2/adproc/coursework/nbproject/project.properties
@@ -51,7 +51,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pipesrus.Gui
+main.class=pipesrus.App
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
