--- a/second/gude/webapp/package.json
+++ b/second/gude/webapp/package.json
@@ -12,6 +12,8 @@
     "grunt-autoprefixer": "~0.6.5",
     "grunt-csso": "~0.5.3",
     "grunt-html": "~0.3.4",
-    "grunt-contrib-jshint": "~0.8.0"
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-connect": "~0.7.1",
+    "grunt-contrib-jade": "~0.11.0"
   }
 }
